--- a/styles/allbed/allbed.module.scss
+++ b/styles/allbed/allbed.module.scss
@@ -8,7 +8,7 @@
   div {
     h1 {
       color: #ffffff;
-      font-family: "Sofia Pro", sans-serif;
+
       font-size: 44px;
       text-align: center !important;
       padding: 40px 0px 0px;
@@ -19,7 +19,6 @@
     color: rgb(255, 255, 255);
     font-size: 15px;
     margin-top: 1.5rem !important;
-    font-family: "Roboto", sans-serif !important;
 
     font-weight: var(--bs-body-font-weight);
     line-height: var(--bs-body-line-height);
@@ -43,7 +42,7 @@
 .del {
   background-color: #ec9e17;
   margin-top: 0.5rem !important;
-  font-family: var(--bs-body-font-family);
+  // font-family: var(--bs-body-font-family);
   font-size: var(--bs-body-font-size);
   font-weight: var(--bs-body-font-weight);
   line-height: var(--bs-body-line-height);
@@ -57,7 +56,7 @@
     margin-bottom: 0.5rem;
     font-weight: 500;
     line-height: 1.2;
-    font-family: "Sofia Pro", sans-serif;
+
     text-align: center !important;
   }
 }
@@ -69,7 +68,7 @@
     font-weight: 700;
     font-size: 42px;
     margin-bottom: 15px;
-    font-family: "Sofia Pro", sans-serif;
+
     text-align: center;
     margin-bottom: 65px;
   }
@@ -162,7 +161,7 @@
     color: #222178;
     font-weight: 700;
     font-size: 42px;
-    font-family: "Sofia Pro", sans-serif;
+
     text-align: center;
     margin-top: 70px;
   }
@@ -225,7 +224,7 @@
 .mydiv6heading {
   h1 {
     text-align: center;
-    font-family: sans-serif;
+
     font-size: 38px;
     padding: 30px 0px 40px;
     font-weight: 700;
@@ -239,7 +238,7 @@
     font-size: 42px;
     margin-bottom: 28px;
     text-align: center;
-    font-family: sans-serif;
+
     margin-top: 95px;
     color: #222178;
   }
@@ -252,7 +251,7 @@
     p {
       text-align: center;
       font-size: 14px;
-      font-family: sans-serif;
+
       font-weight: 600;
       margin-top: 18px;
     }
@@ -273,7 +272,7 @@
     p {
       text-align: center;
       font-size: 14px;
-      font-family: sans-serif;
+
       font-weight: 600;
       margin-top: 18px;
     }
@@ -290,7 +289,7 @@
   h2 {
     text-align: center;
     color: red;
-    font-family: sans-serif;
+
     text-transform: uppercase;
     margin-bottom: 20px;
     font-size: 1.5rem;
@@ -309,7 +308,7 @@
   }
   p {
     text-align: center;
-        max-width: 595px;
+    max-width: 595px;
     display: block;
     margin: 0 auto;
     color: #7c7c7c;
@@ -338,38 +337,34 @@
   }
 }
 
-.discover{
-
-
+.discover {
 }
-.benifit{
-    h1{
-        font-size: 42px;
-        font-weight: 700;
-        margin-bottom: 15px;
-        text-align: center!important;
-        color: #262884;
-        margin-bottom: 20px;
-    }
-    p{
-        text-align: center;
-        margin-bottom: 50px;
-    }
+.benifit {
+  h1 {
+    font-size: 42px;
+    font-weight: 700;
+    margin-bottom: 15px;
+    text-align: center !important;
+    color: #262884;
+    margin-bottom: 20px;
+  }
+  p {
+    text-align: center;
+    margin-bottom: 50px;
+  }
 }
-.service{
-    
-    padding: 7px 31px 5px 26px;
-    border-radius: 42px;
-    font-size: 18px;
-    border: 0;
-    display: block;
-    margin: 0px auto;
-    margin-top: 50px;
-    color: #fff;
-    background-color: #0d6efd;
-    border-color: #0d6efd;
+.service {
+  padding: 7px 31px 5px 26px;
+  border-radius: 42px;
+  font-size: 18px;
+  border: 0;
+  display: block;
+  margin: 0px auto;
+  margin-top: 50px;
+  color: #fff;
+  background-color: #0d6efd;
+  border-color: #0d6efd;
 }
-
 
 // -----------------------------------------------------------------
 
@@ -379,19 +374,19 @@
 .productname {
   p {
     padding-top: 10px;
-  padding-left: 10px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  line-clamp: 2;
-  -webkit-box-orient: vertical;
+    padding-left: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
   }
 }
 .price {
   font-size: 20px;
   font-weight: 700;
-  font-family: sans-serif;
+
   color: #008849;
   padding-left: 10px;
 }
@@ -406,14 +401,12 @@
   background-color: #f5f5f5;
   margin-top: 30px;
   padding-top: 45px;
-  h4{
+  h4 {
     text-align: center;
   }
-  h2{
+  h2 {
     text-align: center;
   }
- 
- 
 }
 .viewAllProduct {
   color: #ffffff;
@@ -433,7 +426,7 @@
   display: block;
 }
 
-.sofabutton8{
+.sofabutton8 {
   color: rgb(255, 255, 255);
   background-color: black;
   padding: 7px 31px 5px 26px;
@@ -460,25 +453,23 @@
   top: 33px;
 }
 
-.perfect{
+.perfect {
   border: 1px solid;
   border-color: gray;
-
-} 
-.perfect8{
+}
+.perfect8 {
   text-align: center;
   margin-top: 80px;
   border: 1px solid;
   padding: 14px 0 14px;
   border-color: gray;
- 
 }
 
-.refresh{
+.refresh {
   text-align: center;
 }
 
-.box9{
+.box9 {
   border: 1px solid rgba(128, 128, 128, 0.3882352941);
   width: 260px;
   border-bottom-left-radius: 8px;
@@ -486,18 +477,17 @@
   height: 319px;
 }
 
-.season{
+.season {
   text-align: center;
 }
 
-.productname8{
-
+.productname8 {
   padding-left: 10px;
   padding-right: 10px;
   align-items: center;
   font-size: 14px;
 }
 
-.productsimages9{
+.productsimages9 {
   background-color: #f5f5f5;
 }
