--- a/styles/product/cart.module.scss
+++ b/styles/product/cart.module.scss
@@ -209,7 +209,7 @@
         .price {
           font-weight: 400;
           font-size: 1rem;
-          font-family: "Circular-Loom";
+          // font-family: "Circular-Loom";
         }
 
         .qty {
@@ -438,7 +438,7 @@ ul.formdesign {
       margin-bottom: 0;
       font-size: inherit;
       line-height: 1.5;
-      font-family: sans-serif;
+
       opacity: 0.5;
     }
 
