--- a/styles/new-product.module.scss
+++ b/styles/new-product.module.scss
@@ -78,6 +78,7 @@ $mobile: 576px;
   padding-left: 20px;
   padding-right: 20px;
   border-bottom: 1px solid #dadada;
+  align-items: center;
 }
 
 .btn {
@@ -94,6 +95,7 @@ $mobile: 576px;
     font-size: 16px;
     font-weight: 700;
     color: #0e3f70;
+    margin-bottom: 0px;
   }
 }
 
