--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -375,6 +375,8 @@ hr.banner_icons {
 
 .productsimages {
   background-color: #f5f5f5;
+  padding-top: 50px;
+  padding-bottom: 50px;
   .mainh2 {
     text-align: center;
     padding: 12px 0px;
@@ -382,27 +384,28 @@ hr.banner_icons {
   }
 
   .productname {
-    font-size: 16px;
+    font-size: 14px;
     color: #000;
-    font-weight: 700;
-
-    padding-top: 10px;
-    padding-left: 10px;
+    font-weight: 400;
     font-style: normal;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 2; /* number of lines to show */
+    // -webkit-line-clamp: 2; /* number of lines to show */
+    // line-clamp: 2;
     -webkit-box-orient: vertical;
-    line-height: 20px;
+    line-height: 17px;
+    background: #e1e1e11f;
+    padding: 10px;
   }
   .price {
     font-size: 1rem;
     font-weight: 700;
-
+    position: relative;
     color: #000;
-    padding-left: 10px;
+    //padding-left: 10px;
     font-style: normal;
+    padding: 0 10px;
   }
   .price del {
     opacity: 0.51;
@@ -410,21 +413,34 @@ hr.banner_icons {
     padding-left: 8px;
   }
   .price span {
-    color: #4ecb4e;
+    color: #fff;
     font-weight: 500;
     padding-left: 4px;
+    background: #4ecb4e;
+    border-radius: 5px;
+    font-size: 12px;
+    position: absolute;
+    right: 10px;
+    padding: 2px 9px;
   }
   .box1 {
-    padding-bottom: 70px;
+    padding-bottom: 10px;
     width: 260px;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    img {
-      width: 255px;
+    border: 2px solid #ebe9e9;
+    background-color: #fff;
+    .productimh {
+      object-fit: cover;
+      object-position: -60px;
     }
     .trustpilot {
       img {
         width: 175px;
+        margin: 0 auto;
+        display: block;
+        position: static !important;
+        padding-top: 0px !important;
       }
     }
   }
@@ -712,7 +728,8 @@ section.qualityproducts {
   border: 1px solid #00000026;
   .image {
     img {
-      min-height: 200px;
+      min-height: 230px;
+      -o-object-fit: cover;
       object-fit: cover;
     }
   }
@@ -776,6 +793,40 @@ section.qualityproducts {
     .item {
       scroll-snap-align: center;
       min-width: 220px;
+    }
+  }
+}
+
+.categorygesign {
+  position: relative;
+  .text {
+    position: absolute;
+    top: 80%;
+    width: 100%;
+    transition-duration: 0.5s;
+    background-color: rgba(32, 52, 69, 0.7803921569);
+    color: #fff;
+    padding: 15px !important;
+    h1 {
+      font-weight: 400;
+      font-size: 15px !important;
+    }
+    p {
+      color: #fff !important;
+      font-weight: 100;
+      font-size: 12px !important;
+      word-spacing: 1.4px;
+      opacity: 0 !important;
+    }
+  }
+  &:hover {
+    .text {
+      transform: translate(0%, -100%);
+      top: 100%;
+      transition-duration: 0.5s;
+      p {
+        opacity: 1 !important;
+      }
     }
   }
 }
