--- a/styles/product/product.module.scss
+++ b/styles/product/product.module.scss
@@ -377,3 +377,23 @@ $mobile: 576px;
     border-bottom: 1px solid #000;
   }
 }
+@media (max-width: 1550px) {
+  .container {
+    transform: translateY(-50%) scale(0.8);
+  }
+}
+@media (max-width: 1250px) {
+  .container {
+    transform: translateY(-50%) scale(0.7) !important;
+  }
+}
+@media (max-width: 1100px) {
+  .container {
+    transform: translateY(-50%) scale(0.6) !important;
+  }
+}
+@media (max-width: 950px) {
+  .container {
+    transform: translateY(-50%) scale(0.5) !important;
+  }
+}
