--- a/styles/new-product.module.scss
+++ b/styles/new-product.module.scss
@@ -491,4 +491,40 @@ $mobile: 576px;
       font-size: small;
     }
   }
+  .color {
+    padding: 7px 7px;
+    overflow-y: inherit;
+    background: #7c7c7c14;
+    height: auto;
+  }
+  .texture {
+    background-color: #fff;
+    margin-bottom: 0px;
+    display: grid;
+    gap: 5px;
+    flex-wrap: wrap;
+    list-style: none;
+    font-size: 10px;
+    padding: 10px !important;
+    grid-template-columns: repeat(3, 1fr);
+    li {
+      flex: 1;
+      width: 100% !important;
+    }
+  }
+  .header {
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-bottom: 1px solid #dadada;
+    align-items: center;
+
+    /* border-left: 3px solid #dadada; */
+    /* border-right: 3px solid #dadada; */
+  }
+  .productsimages {
+    display: none;
+  }
 }
