--- a/styles/product/product.module.scss
+++ b/styles/product/product.module.scss
@@ -397,3 +397,24 @@ $mobile: 576px;
     transform: translateY(-50%) scale(0.5) !important;
   }
 }
+
+@media (max-width: $mobile) {
+  .container {
+    transform: none !important;
+    position: static !important;
+  }
+  .item2 {
+    border-bottom: 7px solid #f5f5f5;
+  }
+  .productName {
+    font-size: 20px;
+    max-width: 435px;
+    color: #233645;
+    font-weight: 600;
+    line-height: 1.4;
+  }
+  .productName {
+    padding: 11px 11px !important;
+    margin-bottom: 0px !important;
+  }
+}
