--- a/styles/product/product.module.scss
+++ b/styles/product/product.module.scss
@@ -407,7 +407,7 @@ $mobile: 576px;
     border-bottom: 7px solid #f5f5f5;
   }
   .productName {
-    font-size: 20px;
+    font-size: 18px;
     max-width: 435px;
     color: #233645;
     font-weight: 600;
@@ -416,5 +416,24 @@ $mobile: 576px;
   .productName {
     padding: 11px 11px !important;
     margin-bottom: 0px !important;
+  }
+
+  .left {
+    background: #203546;
+
+    // padding: 2px
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .left {
+    padding: 4px;
+    background: #0e3f70;
+  }
+  .imageContainer {
+    .image {
+      height: 220px;
+      object-position: -50px;
+    }
   }
 }
