--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -4,11 +4,10 @@
 
 .headingh1 {
   font-size: 40px;
-
+  margin-bottom: 0;
   text-align: center;
   font-weight: 700;
-  color: #0e3f70;
-  margin-bottom: 40px;
+  color: #fff;
 }
 .paragraphp {
   text-align: center;
@@ -20,48 +19,10 @@
   margin-bottom: 10px;
   word-break: break-word;
 }
-.rightbedheading {
-  font-size: 38px;
-  font-weight: 300;
-  line-height: 55px;
 
-  text-align: center;
-  color: #0e3f70;
-  margin-left: -70px;
-  position: relative;
-  left: 75px;
-}
-.bannersection {
-  position: relative;
-  margin-left: -8vh;
-  background-color: #dff2f0;
-  margin-top: 50px;
-}
-.rightbed {
-  margin: 65% 40% 0 0;
-}
-.sizeh1 {
-  text-align: center;
-  font-size: 43px;
-  margin: 40px 0 50px 0px;
-  font-weight: 700;
-
-  color: #0e3f70;
-}
-.bedicon {
-  margin-left: 5vh;
-}
-.parap {
-  text-align: center;
-  margin-top: 12px;
-  color: #0e3f70;
-
-  font-weight: 700;
-  font-size: 15px;
-}
 .items {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .showingitems {
   list-style: none;
@@ -71,6 +32,7 @@
 }
 .selectnumber {
   list-style: none;
+  text-align: right;
 }
 .selectoption {
   padding: 0.2rem 0.8rem;
@@ -119,12 +81,7 @@
 .productsimages {
   margin-top: 30px;
 }
-.bedbox {
-  margin-left: 38px;
-}
-.shopsize {
-  margin-top: 20px;
-}
+
 .content1 {
   margin-top: 10px;
 
@@ -158,23 +115,25 @@
     padding-top: 16px;
   }
 }
-.bedicon {
-  padding-top: 20px;
-  .bedbox {
-    margin-left: 38px;
 
-    p {
-      text-align: center;
-      font-size: 14px;
-
-      font-weight: 600;
-      margin-top: 18px;
-    }
-    img {
-      width: 120px;
-      height: 101px;
-      margin: 0 auto;
-      display: block;
+.section_first {
+  background-color: #000;
+  padding: 70px;
+}
+.left_filter {
+  margin-top: 60px;
+  h3 {
+    font-size: 18px;
+    font-weight: 600;
+  }
+  ul li {
+    padding: 5px 10px;
+  }
+}
+.divan-ProductCard {
+  .divans {
+    .productsimages {
+      background-color: transparent !important;
     }
   }
 }
