--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -10,12 +10,10 @@
   color: #fff;
 }
 .paragraphp {
-  text-align: center;
-  font-size: 22px;
+  font-size: 18px;
   line-height: 1.4em;
   color: #0e3f70;
-  font-weight: 400;
-
+  font-weight: 300;
   margin-bottom: 10px;
   word-break: break-word;
 }
@@ -40,10 +38,9 @@
   border: 2px solid #e3e3e3;
 }
 .parashowing {
-  font-size: 18px;
-
-  font-weight: 500;
-  color: #0e3f70;
+  font-size: 15px;
+  font-weight: 400;
+  color: #000;
 }
 .beddropdown {
   margin: 50px 0;
