--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -27,7 +27,7 @@ $tab: 768px;
 .row {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .image-container {
   display: flex;
@@ -105,12 +105,10 @@ $tab: 768px;
   display: flex;
   padding-left: 10px;
   border: 1px solid rgba(128, 128, 128, 0.4509803922);
-  border-radius: 44px;
   height: 50px;
   input[type="text"] {
-    padding: 10px;
     border: 0px;
-    padding: 8px 5px;
+    padding: 0px;
     outline: none;
     width: 100%;
     max-width: 100%;
@@ -126,8 +124,7 @@ $tab: 768px;
     padding: 10px;
     border: 0px;
     padding: 0px 16px;
-    border-radius: 0px 44px 44px 0px;
-    background: var(--primary-color);
+    background: #222178;
   }
 }
 .logo {
@@ -145,7 +142,7 @@ $tab: 768px;
     display: flex;
     // gap: 10px;
     li {
-      min-width: 70px;
+      // min-width: 70px;
     }
     li,
     a {
@@ -165,8 +162,8 @@ $tab: 768px;
       color: var(--primary-color);
     }
     svg {
-      height: 22px;
-      width: 22px;
+      height: 32px;
+      width: 53px;
     }
   }
 }
@@ -238,7 +235,7 @@ $tab: 768px;
     li {
       list-style: none;
       font-size: 14px;
-
+      padding-left: 15px;
       font-weight: 600;
       color: #626363;
       line-height: 38px;
@@ -335,15 +332,19 @@ $tab: 768px;
 .mainmenu ul li:hover a + ul {
   position: absolute;
   background: #ffffff;
-  left: 0;
-  top: 100%;
+  left: 15%;
+  top: 103%;
   color: blue;
   z-index: 9;
   padding-top: 15px;
   display: block;
-  width: 100%;
+  width: 10%;
   transition: all 0.4s ease;
   box-shadow: 0px 3px 1px 2px rgb(128 128 128 / 40%);
+  text-align: left;
+}
+.mainmenu ul li:hover a + ul li {
+
 }
 .mainmenu ul li a + ul {
   display: none;
@@ -470,6 +471,43 @@ $tab: 768px;
     padding: 0.2rem;
     background: transparent;
   }
+}
+.image-container ul {
+   display: flex;
+   li {
+    font-size: 16px;
+    margin-left: 15px;
+    font-weight: 600;
+    font-family: roboto, sans-serif;
+    padding: 8px 0 0;
+   }
+}
+.contact-container ul li {
+  font-size: 16px;
+  font-weight: 500;
+}
+.account-container ul li {
+  font-size: 16px;
+  margin-left: 20px;
+  cursor: pointer;
+}
+.logo {
+  padding-top: 10px;
+}
+.logo a img {
+  width: 100px;
+}
+.controls ul p {
+  font-size: 10px;
+}
+.text {
+  font-size: 15px;
+}
+.controls ul li {
+  margin-left: 20px;
+}
+.texts {
+  font-size: 9px;
 }
 /***********************************************
  FOOTER STYLE
