--- a/styles/divanbed.module.scss
+++ b/styles/divanbed.module.scss
@@ -138,7 +138,7 @@
   }
 }
 .mydiv7 {
-  background-image: url(/image/q.png);
+  background-image: url(/image/fridaybanner.webp);
   padding: 50px 0 0;
   margin-top: 80px;
   margin-bottom: 50px;
