--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -344,7 +344,6 @@ $tab: 768px;
   text-align: left;
 }
 .mainmenu ul li:hover a + ul li {
-
 }
 .mainmenu ul li a + ul {
   display: none;
@@ -360,88 +359,6 @@ $tab: 768px;
     color: #fff !important;
   }
 }
-
-// @media (max-width: $tab) {
-//   .mobileheadert {
-//     display: block;
-//   }
-//   .container {
-//     display: none;
-//   }
-//   .carticon {
-//     display: none;
-//   }
-//   .searchbar {
-//     display: none;
-//   }
-//   .mainmenu {
-//     display: none;
-//   }
-//   .mainlogo {
-//     display: none;
-//   }
-
-//   .header2 {
-//     display: flex;
-//     justify-content: space-between;
-
-//     padding: 0px 10px;
-//     align-items: center;
-//     background-color: #f2f2f2;
-//     .image-container {
-//       .headerimage {
-//         max-width: 100px;
-//         margin-left: 3px;
-//       }
-
-//       padding: 0px 10px;
-//       align-items: center;
-//       background-color: #f2f2f2;
-//       .image-container {
-//         .headerimage {
-//           max-width: 100px;
-//           margin-left: 3px;
-//         }
-//         .secondbox1 {
-//           display: flex;
-//           gap: 10px;
-//           font-size: 14px;
-//           line-height: 29px;
-//           font-weight: 600;
-//         }
-//       }
-
-//       .ulstyle {
-//         margin: 0px;
-//       }
-//       .iconstyle {
-//         margin-top: 0px !important;
-//       }
-//       .cart3 {
-//         display: flex;
-//         align-items: center;
-//         justify-content: space-between;
-//         margin-right: 10px;
-//         padding-top: 10px;
-//         padding-bottom: 10px;
-//       }
-//       .pstyle {
-//         margin-bottom: 0px !important;
-//         white-space: nowrap;
-//         font-size: 12px;
-//       }
-//       .carticon1 {
-//         display: flex;
-//         gap: 15px;
-//       }
-//       .wishlist {
-//         text-align: center;
-//       }
-//     }
-//   }
-// }
-
-// NAVIGATION MODEL STYLE
 
 .navigation-model {
   top: 0;
@@ -473,14 +390,15 @@ $tab: 768px;
   }
 }
 .image-container ul {
-   display: flex;
-   li {
+  display: flex;
+  margin: 0;
+  li {
     font-size: 16px;
     margin-left: 15px;
     font-weight: 600;
     font-family: roboto, sans-serif;
     padding: 8px 0 0;
-   }
+  }
 }
 .contact-container ul li {
   font-size: 16px;
