--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,5 @@
 $mobile: 576px;
 @import "./variable.scss";
-// @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.6.3/css/all.min.css");
 
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
@@ -61,6 +60,8 @@ a {
 
 input {
   font-family: "Inter", sans-serif;
+  border: none;
+  outline: none;
 }
 
 button {
