--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -118,7 +118,7 @@
   padding: 70px;
 }
 .left_filter {
-  margin-top: 60px;
+  // margin-top: 60px;
   h3 {
     font-size: 18px;
     font-weight: 600;
