--- a/styles/footer/footer.module.scss
+++ b/styles/footer/footer.module.scss
@@ -98,3 +98,74 @@ p {
   text-align: center;
 }
 }
+
+.footer1 ul {
+  display: flex;
+  justify-content: space-around;
+}
+.footer1 ul li img {
+  width: 120px;
+}
+.footer1s ul {
+  display: block;
+}
+.footer1s ul li {
+  color: #fff;
+}
+.footer1s ul li svg {
+  margin-right: 5px;
+}
+.footer1s ul li a {
+  padding-left: 5px;
+}
+.footer1s ul li {
+  color: #fff;
+    font-size: 14px;
+    font-weight: 500;
+    padding-bottom: 10px;
+}
+.footer1es ul {
+  display: flex;
+  justify-content: revert;
+}
+.footer1es ul li {
+  padding-left: 10px;
+}
+.footer2 h3 {
+  color: #fff;
+  font-weight: 700;
+  font-size: 18px;
+  padding-bottom: 12px;
+}
+.footer2 ul li {
+  font-size: 15px;
+  padding-bottom: 14px;
+  color: #cbcbcb;
+  font-weight: 400;
+  padding-left: 10px;
+}
+.mainfooter {
+  background-color: #222178;
+  padding-top: 50px;
+}
+.footer2 ul li:hover{
+  color: #fff;
+}
+.footer2s ul {
+  display: flex;
+  justify-content: center;
+  border-top: 1px solid #FFFFFF40;
+  padding-top: 12px;
+}
+.mainlastfooter p {
+  font-size: 12px;
+  margin-bottom: 0;
+  padding: 10px 0px 10px 0px;
+  color: #fff;
+  width: 120%;
+  margin-left: -130px;
+}
+.mainlastfooter {
+  background-color: #222178;
+  border-top: 1px solid #FFFFFF40;
+}
