--- a/styles/footer/footer.module.scss
+++ b/styles/footer/footer.module.scss
@@ -162,8 +162,7 @@ p {
   margin-bottom: 0;
   padding: 10px 0px 10px 0px;
   color: #fff;
-  width: 120%;
-  margin-left: -130px;
+  text-align: center;
 }
 .mainlastfooter {
   background-color: #222178;
