--- a/styles/grid-card.module.scss
+++ b/styles/grid-card.module.scss
@@ -75,9 +75,9 @@
     justify-content: space-between;
   }
   .price del {
-    opacity: 0.5;
     font-size: 14px;
     margin-left: 8px;
+    color: #73766e;
   }
   .price .offer {
     color: #fff;
