--- a/styles/product/page.module.scss
+++ b/styles/product/page.module.scss
@@ -25,13 +25,32 @@
     }
   }
 }
+
+.grid .left .product-image {
+  display: flex;
+  margin-bottom: 10px;
+  img {
+    transition: all 50ms ease;
+  }
+  figure {
+    transition: all 50ms ease;
+    background-repeat: no-repeat;
+    margin: 0;
+  }
+  figure:hover {
+    opacity: 1;
+    img {
+      opacity: 0;
+      transition: all 50ms ease-in;
+    }
+  }
+}
 .grid .right {
   width: 92%;
   .product-name {
     h1 {
       font-size: 34px;
       font-weight: 600;
-      font-family: roboto, sans-serif;
     }
   }
   .trustpilot {
@@ -53,7 +72,6 @@
     font-size: 35px;
     font-weight: 700;
     line-height: 1;
-    font-family: "roboto", sans-serif;
   }
   .product-options {
     .colors {
@@ -73,7 +91,7 @@
         select {
           outline: none;
           flex: 1;
-          font-family: "roboto", sans-serif;
+
           padding: 10px;
           border: 2px solid #e6e6e6;
           font-size: 14px;
@@ -125,6 +143,51 @@
       font-weight: 600;
       height: 40px;
       margin-top: 15px;
+    }
+  }
+}
+
+.image-lists {
+  display: flex;
+  align-items: center;
+  position: relative;
+  max-width: 520px;
+  .arrow-left,
+  .arrow-right {
+    position: absolute;
+    height: 40px;
+    min-width: 40px;
+    border-radius: 100%;
+    display: grid;
+    place-content: center;
+    background: #000000ab;
+    backdrop-filter: blur(12px);
+    top: 50%;
+    transform: translateY(-50%);
+
+    user-select: none;
+    cursor: pointer;
+  }
+  .arrow-left {
+    left: 8px;
+  }
+  .arrow-right {
+    right: 8px;
+  }
+  ul {
+    gap: 10px;
+    margin: 0;
+    display: flex;
+    overflow: hidden;
+    align-items: center;
+    li {
+      display: flex;
+      img {
+        min-width: 100px;
+        height: 100px;
+        object-fit: cover;
+        pointer-events: none;
+      }
     }
   }
 }
