--- a/styles/grid-card.module.scss
+++ b/styles/grid-card.module.scss
@@ -53,13 +53,15 @@
     display: flex;
     h2 {
       display: -webkit-box;
-      -webkit-box-orient: vertical;
-      -webkit-line-clamp: 3;
-      overflow: hidden;
-      font-size: 14px;
-      color: #000;
-      font-weight: 600;
-      font-style: normal;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+    font-size: 12px;
+    color: #000;
+    font-weight: 600;
+    font-style: normal;
+    cursor: pointer;
+    text-align: center;
     }
   }
 
@@ -72,7 +74,8 @@
     font-style: normal;
     align-items: center;
     padding: 5px 10px 0 10px;
-    justify-content: space-between;
+    justify-content: center;
+    cursor: pointer;
   }
   .price del {
     opacity: 0.5;
@@ -105,3 +108,9 @@
 // 375
 // 320
 // 280
+
+.clearpaycontent a { 
+  font-size: 14px;
+  color: blue !important;
+  padding-left: 15px;
+} 
