--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -1002,4 +1002,103 @@ section.qualityproducts {
     background-repeat: no-repeat;
     width: 100%;
     background-size: cover;
+    margin-top: 20px;
+}
+
+
+@media (max-width:500px) {
+  .hero-container {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url(/_next/static/media/fridaybanner.cdcfa7e3.webp);
+    background-position: center;
+    width: auto;
+    height: 190px;
+  }
+  .section2 .mwfull {
+    width: 100%;
+}
+.complementcontent h3 { 
+  text-align: center;
+}
+.complementcontent1 img{
+  display: none;
+}
+.bestsellingproduct button {
+  font-size: 15px;
+}
+.complementcontent1 button { 
+  padding: 15px 0px 15px 0px;
+    border-radius: 7px 7px 7px 7px;
+    background-color: #F3F3F3;
+    color: #000000;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 15px;
+    width: 200px;
+    position: relative;
+    left: 95px;
+    top: 0;
+}
+.complementsection {
+  padding-bottom: 20px;
+}
+.dreambedcontent1 ul li {
+  margin-bottom: 10px;
+}
+.dreambedsection .mwfull {
+  width: 100%;
+}
+.dreambedcontent p {
+  width: auto;
+}
+.dreambedcontent1 p {
+  font-size: 16px !important;
+}
+.onemattresssection .mwfull {
+  width: 100%;
+}
+.onemattressscontent1 p {
+  width: auto;
+}
+.lastsection .mwfull {
+  width: 100%;
+}
+.lastcontent p {
+  width: auto;
+}
+.complementsection .mwfull {
+  width: 100%;
+}
+.lastcontent {
+  margin-left: 0;
+  margin-top: 20px;
+}
+.bannerimage {
+  background-position: center;
+  margin-top: 20px;
+  height: 120px;
+  padding: inherit;
+}
+.onemattresssection .mwfull {
+  width: 100%;
+}
+.mattresssection h3 {
+  font-size: 24px;
+}
+.onemattressscontent img {
+  padding-top: 0;
+}
+.onemattresssection {
+  margin-top: 25px;
+}
+.onemattressscontent1 {
+  padding: 50px 0 0 0;
+}
+.thousandcontent1 {
+  margin-top: 20px;
+}
+.thousandcontent img {
+  padding-top: 30px;
+}
 }
