--- a/styles/grid-card.module.scss
+++ b/styles/grid-card.module.scss
@@ -49,19 +49,19 @@
   flex-direction: column;
   .name {
     padding: 10px;
-    background: #e1e1e11f;
+    // background: #e1e1e11f;
     display: flex;
     h2 {
       display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
-    overflow: hidden;
-    font-size: 12px;
-    color: #000;
-    font-weight: 600;
-    font-style: normal;
-    cursor: pointer;
-    text-align: center;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 3;
+      overflow: hidden;
+      font-size: 12px;
+      color: #000;
+      font-weight: 600;
+      font-style: normal;
+      cursor: pointer;
+      text-align: center;
     }
   }
 
@@ -109,14 +109,15 @@
 // 320
 // 280
 
-.clearpaycontent a { 
+.clearpaycontent a {
   font-size: 14px;
   color: blue !important;
   padding-left: 10px;
-} 
+}
 .clearpaycontent {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: -75px;
   margin-top: 20px;
-} 
+  justify-content: center;
+}
