--- a/styles/grid-card.module.scss
+++ b/styles/grid-card.module.scss
@@ -76,6 +76,8 @@
     padding: 5px 10px 0 10px;
     justify-content: center;
     cursor: pointer;
+    margin-bottom: 0;
+    margin-top: 10px;
   }
   .price del {
     font-size: 14px;
