--- a/styles/product/page.module.scss
+++ b/styles/product/page.module.scss
@@ -7,7 +7,11 @@
   padding: 20px 20px;
   gap: 3rem;
 }
-
+.productname1 h1 {
+  font-size: 34px;
+  font-weight: 600;
+  display: none;
+}
 .grid .left {
   .year_warranty {
     margin-top: 25px;
@@ -137,6 +141,7 @@
           gap: 13px;
           margin: 0 0 0 10px;
           padding: 5px;
+          flex-wrap: wrap;
         }
       }
     }
@@ -199,6 +204,57 @@
       font-weight: 600;
       height: 40px;
       margin-top: 15px;
+    }
+  }
+}
+
+@media (max-width:500px) {
+   .grid {
+    grid-template-columns: 1fr;
+   }
+   .grid .left .image-section .product-image img {
+    height: auto;
+    max-width: 90%;
+   }
+   .image-lists {
+    display: none;
+   }
+   .product-name h1 {
+    display: none;
+   }
+   .productname1 h1 {
+    display: block;
+   }
+   .grid .right {
+    margin-top: -55px;
+   }
+   .trustpilot a {
+    display: flex;
+    align-items: flex-end;
+   }
+   .coupon {
+    display: none;
+   }
+   .price {
+    margin-top: 25px;
+   }
+   .addToBasket {
+    padding: 10px 0 10px 0 !important;
+    width: 115px;
+    height: 50px;
+    font-size: 10px !important;
+   }
+   .size-guide {
+    height: 50px !important;
+    width: 125px;
+    font-size: 10px !important;
+   }
+   .year_warranty {
+    margin-right: 28px;
+   }
+   .input {
+    input {
+      height: 50px !important;
     }
   }
 }
