--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -1101,4 +1101,10 @@ section.qualityproducts {
 .thousandcontent img {
   padding-top: 30px;
 }
+.section3content h3 {
+  font-size: 26px;
+} 
+.mattresssection {
+  margin-top: 30px;
+}
 }
