--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -134,3 +134,24 @@
     }
   }
 }
+
+@media (max-width:500px) {
+  .selectoption {
+    padding: 10px 10px 10px 10px;
+    font-size: 13px;
+  }
+  .beddropdown .mwfull {
+    width: 100%;
+  }
+  .left_filter {
+    display: none;
+  }
+  .paragraphp {
+    font-size: 16px;
+    color: #000;
+    font-weight: 400;
+    text-align: left;
+    padding: 30px 0 0 0;
+    line-height: 28px;
+  }
+}
