--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -484,12 +484,21 @@ $tab: 768px;
     }
 
     li ul {
+      border: 2px solid red;
       top: 0;
       left: 100%;
       position: absolute;
+      z-index: 20;
+      display: flex;
+      flex-direction: column;
+      display: none;
+      a{
+        white-space: nowrap;
+      }
     }
     li:hover ul {
       background: #000000;
+      display: flex;
     }
   }
 }
