--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -915,7 +915,6 @@ section.qualityproducts {
 .dreambedcontent p {
   font-size: 18px;
   font-weight: 400;
-  width: 876px;
   line-height: 28px;
 }
 .dreambedsection {
@@ -936,8 +935,11 @@ section.qualityproducts {
     font-weight: 600;
 }
 .onemattressscontent1 {
-  padding: 80px 0 0 0;
+  padding: 30px 0 0 0;
     margin-left: 10px;
+}
+.onemattresssection {
+  margin-top: 37px;
 }
 .onemattressscontent1 h3 {
   font-size: 29px;
@@ -949,12 +951,14 @@ section.qualityproducts {
   font-size: 18px;
   font-weight: 400;
   line-height: 26px;
-  width: 767px;
   margin-bottom: 12px;
   margin-top: 15px;
 }
-.onemattressscontent img {
-  padding-top: 80px;
+.mattresssection {
+  margin-top: 30px;
+}
+.onemattressscontent0 {
+  padding-top: 30px;
 }
 .thousandcontent img {
   padding-top: 80px;
@@ -990,7 +994,6 @@ section.qualityproducts {
   line-height: 26px;
   margin-bottom: 12px;
   margin-top: 15px;
-  width: 910px;
 }
 .lastsection {
   margin-top: 55px;
