changes from krishna  end

--- a/styles/product/page.module.scss
+++ b/styles/product/page.module.scss
@@ -23,8 +23,9 @@
   border-bottom: 4px solid #22217921!important;
   padding: 13px 30px;
   cursor: pointer;
-  font-weight: 600;
-  color: #515151; 
+  font-weight: 700;
+  color: #515151;
+  font-size: 18px;
 }
 .tab1 ul {
   display: flex;
