--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -1031,17 +1031,18 @@ section.qualityproducts {
   font-size: 15px;
 }
 .complementcontent1 button { 
-  padding: 15px 0px 15px 0px;
-    border-radius: 7px 7px 7px 7px;
-    background-color: #F3F3F3;
-    color: #000000;
-    text-transform: uppercase;
-    font-weight: 500;
-    font-size: 15px;
-    width: 200px;
-    position: relative;
-    left: 95px;
-    top: 0;
+  padding: 16px 10px 15px 10px !important;
+  left: 110px !important;
+  top: -20px !important;
+}
+.dreambedcontent h3 {
+  font-size: 28px;
+}
+.onemattressscontent1 h3 {
+  font-size: 22px;
+}
+.thousandcontent1 h3 {
+  font-size: 22px;
 }
 .complementsection {
   padding-bottom: 20px;
