--- a/styles/product/page.module.scss
+++ b/styles/product/page.module.scss
@@ -4,12 +4,26 @@
   display: grid;
   // grid-template-columns: repeat(2,1fr);
   grid-template-columns: 1fr 1fr;
-  padding: 20px 20px;
+  padding: 20px 0px;
   gap: 3rem;
 }
-.productname1 h1 {
+.desctab3 p {
+  margin-bottom: 8px;
+  font-size: 16px;
+  color: #3a3a3a;
+  line-height: 25px;
+}
+.desctab3 h5 {
+  color: #3a3a3a;
+  font-size: 18px;
+  margin-top: 16px;
+  font-weight: 700;
+}
+.mainproducttitle h1 {
   font-size: 34px;
   font-weight: 600;
+  font-family: roboto, sans-serif;
+  color: #000;
   display: none;
 }
 .descriptionul {
@@ -17,21 +31,40 @@
   justify-content: center;
 }
 .descriptionul li {
-  margin-left: 40px;
-  background: #22217921!important;
-  border-radius: 10px 10px 0 0!important;
-  border-bottom: 4px solid #22217921!important;
+  margin-left: 15px;
+  background: rgba(34, 33, 121, 0.1294117647) !important;
+  border-radius: 10px 10px 0 0 !important;
+  border-bottom: 4px solid rgba(34, 33, 121, 0.1294117647);
   padding: 13px 30px;
   cursor: pointer;
   font-weight: 700;
   color: #515151;
   font-size: 18px;
 }
+.desctab1 ul li {
+  list-style-type: disc;
+  margin-bottom: 0;
+  font-size: 15px;
+  color: #4b4b6f;
+  font-weight: 600;
+  line-height: 28px;
+}
+.desctab1 ul p {
+  font-size: 16px;
+  padding-top: 10px;
+  color: #4B4F58;
+  margin-bottom: 0;
+  margin-left: -15px;
+}
 .desctab1 h3 {
   margin: 10px 0;
+  margin-left: -15px;
   color: #252681;
   font-weight: 600;
-  color: #515151; 
+  line-height: 1.4;
+  display: block;
+  font-size: 16px;
+  font-family: Roboto,'ms sans serif',Geneva,sans-serif;
 }
 .tab1 ul {
   display: flex;
@@ -130,7 +163,7 @@
 }
 
 .grid .right {
-  width: 92%;
+  width: 100%;
   .product-name {
     h1 {
       font-size: 34px;
@@ -152,6 +185,7 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 4;
+    width: 600px;
   }
   ul.descriptionul {
     display: flex;
@@ -184,7 +218,7 @@
         select {
           outline: none;
           flex: 1;
-
+          width: 100%;
           padding: 10px;
           border: 2px solid #e6e6e6;
           font-size: 14px;
@@ -202,7 +236,7 @@
   }
   .basket-row {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     .basket-count {
       display: flex;
       margin-top: 15px;
@@ -243,6 +277,15 @@
 @media (max-width: 500px) {
   .grid {
     grid-template-columns: 1fr;
+  }
+  .mainproducttitle h1 { 
+    display: block;
+  }
+  .desctab1 {
+    margin-left: 18px;
+}
+  .year_warranty {
+    display: none;
   }
   .grid .left .image-section .product-image img {
     height: auto;
@@ -293,6 +336,15 @@
     margin-left: 5px;
     padding: 12px 15px 12px 18px;
     font-size: 10px;
+  }
+  .desctab3 h5 {
+    font-size: 1.25rem;
+  }
+  .desctab3 p {
+    font-size: 15px;
+    font-weight: 500;
+    color: #3a3a3a;
+    margin-bottom: 8px;
   }
 }
 @media (max-width: 1200px) {
