--- a/styles/product/page.module.scss
+++ b/styles/product/page.module.scss
@@ -161,8 +161,7 @@
       .color-options {
         ul {
           display: flex;
-          gap: 13px;
-          margin: 0 0 0 10px;
+          gap: 0.8rem;
           padding: 5px;
           flex-wrap: wrap;
         }
@@ -296,6 +295,9 @@
 
 //
 .selected-color {
-  color: #222a;
-  font-size: 1rem;
+  color: #fff;
+  padding: 0.4rem;
+  font-size: 0.9rem !important;
+  border-radius: 4px;
+  background: #222178;
 }
