--- a/styles/product/page.module.scss
+++ b/styles/product/page.module.scss
@@ -52,7 +52,7 @@
 .desctab1 ul p {
   font-size: 16px;
   padding-top: 10px;
-  color: #4B4F58;
+  color: #4b4f58;
   margin-bottom: 0;
   margin-left: -15px;
 }
@@ -64,7 +64,7 @@
   line-height: 1.4;
   display: block;
   font-size: 16px;
-  font-family: Roboto,'ms sans serif',Geneva,sans-serif;
+  font-family: Roboto, "ms sans serif", Geneva, sans-serif;
 }
 .tab1 ul {
   display: flex;
@@ -168,7 +168,7 @@
     h1 {
       font-size: 34px;
       font-weight: 600;
-      font-family: roboto,sans-serif;
+      font-family: roboto, sans-serif;
       color: #000;
     }
   }
@@ -277,12 +277,12 @@
   .grid {
     grid-template-columns: 1fr;
   }
-  .mainproducttitle h1 { 
+  .mainproducttitle h1 {
     display: block;
   }
   .desctab1 {
     margin-left: 18px;
-}
+  }
   .year_warranty {
     display: none;
   }
@@ -361,4 +361,101 @@
   font-size: 0.9rem !important;
   border-radius: 4px;
   background: #222178;
+}
+.review {
+  margin-top: 20px;
+  h1 {
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #2d2a2a;
+    font-weight: 700;
+    margin-bottom: 20px;
+    line-height: 1.4;
+    display: block;
+  }
+  .reviewContent {
+    background: #f5f5f5;
+    padding: 20px;
+  }
+  .commentBox {
+    background: #fff;
+    margin-bottom: 20px;
+    .commentWarp {
+      padding: 20px 30px;
+      li {
+        h4 {
+          font-weight: 600;
+          color: #2d2a2a;
+          font-size: 20px;
+          margin-bottom: 0px;
+        }
+        p {
+          color: #4b4f58;
+          font-size: 16px;
+          font-weight: 500;
+        }
+      }
+    }
+  }
+}
+.reviewForm {
+  border: 5px solid #f5f5f5;
+  padding: 20px 37px;
+  h3 {
+    font-size: 28px;
+    color: #4b485f;
+    font-weight: 500;
+  }
+  p {
+    font-size: 19px;
+    font-weight: 400;
+    margin-bottom: 8px;
+  }
+  .form {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    label {
+      padding: 10px 0px;
+      font-size: 19px;
+    }
+    textarea {
+      border: 3px solid #f5f5f5 !important;
+      width: 80%;
+      padding: 10px;
+      height: 100px;
+    }
+    input {
+      border: 3px solid #f5f5f5 !important;
+      width: 50%;
+      padding: 10px;
+      height: 57px;
+    }
+    button {
+      width: 27%;
+      padding: 15px;
+      background: #1e73be;
+      color: #fff;
+      font-weight: 700;
+      font-size: 18px;
+      margin-top: 20px;
+    }
+  }
+  .trust_img {
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .reviewForm {
+    textarea {
+      width: 100% !important;
+    }
+    input {
+      width: 100% !important;
+    }
+    button {
+      width: 45% !important;
+    }
+  }
 }
