--- a/styles/cart.module.scss
+++ b/styles/cart.module.scss
@@ -385,6 +385,7 @@ span.price-sums {
   text-transform: uppercase;
   width: 100%;
   background: #0170B9;
+  margin-bottom: 20px;
 }
 .paymentparagraph p {
   font-size: 14px;
@@ -420,7 +421,7 @@ span.price-sums {
 .Cart_text p:nth-child(2) {
   font-size: 16px;
 }
-.Cart_text p {
+  .Cart_text p {
   padding: 20px 10px;
   width: 100%;
   border: none;
