--- a/styles/footer/footer.module.scss
+++ b/styles/footer/footer.module.scss
@@ -172,6 +172,15 @@ p {
 
 @media (max-width:500px) {
   .mainfooter .mwfull {
-    width: 100%;
+    width: 100% !important;
   }
+}
+@media (max-width:991px) {
+  .mainfooter .mwfull {
+    width: 50%;
+  }
+  .complementsection {
+    padding-bottom: 35px;
+  }
+
 }
