--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -1032,8 +1032,8 @@ section.qualityproducts {
 }
 .complementcontent1 button { 
   padding: 16px 10px 15px 10px !important;
-  left: 110px !important;
-  top: -20px !important;
+  left: 92px !important;
+  top: 30px !important;
 }
 .dreambedcontent h3 {
   font-size: 28px;
@@ -1125,4 +1125,25 @@ section.qualityproducts {
    .hero-container {
     height: 420px;
    }
+}
+@media (max-width:991px) {
+  .hero-container {
+    height: 260px;
+   }
+   .complementcontent h3 {
+    font-size: 18px;
+    padding: 50px 0 0 0;
+   }
+   .complementcontent1 button {
+    left: 55px;
+    top: 32px;
+    padding: 15px 25px 15px 14px;
+    margin-bottom: 60px;
+   }
+   .bannerimage { 
+    height: 310px;
+   }
+   .complementcontent1 img {
+    display: none;
+  }
 }
