--- a/styles/product/page.module.scss
+++ b/styles/product/page.module.scss
@@ -288,7 +288,7 @@
   }
   .grid .left .image-section .product-image img {
     height: auto;
-    max-width: 90%;
+    // max-width: 90%;
   }
   .image-lists {
     display: none;
