--- a/styles/product/page.module.scss
+++ b/styles/product/page.module.scss
@@ -156,8 +156,8 @@
   }
   figure:hover {
     img {
-      opacity: 0;
-      transition: all 50ms linear;
+      // opacity: 0;
+      // transition: all 50ms linear;
     }
   }
 }
@@ -221,6 +221,7 @@
           padding: 10px;
           border: 2px solid #e6e6e6;
           font-size: 14px;
+          display: -webkit-box;
         }
       }
     }
